# graph-atlas

./: .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml
docs/: architecture.md
examples/: demo_network.py
src/graph_atlas/: __init__.py  algorithms.py  graph.py  io.py
tests/: test_cycles.py  test_traversal.py
